Closed
Bug 751881
Opened 13 years ago
Closed 13 years ago
keyCode of keypress event for Tab key and ESC key is broken on Windows
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: ananuti, Assigned: masayuki)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
13.30 KB,
patch
|
jimm
:
review+
|
Details | Diff | Splinter Review |
STR
1. use latest m-c or m-i
2. type `m` in urlbar. my first result for `m` is https://mail.google.com/.
3. press `tab` to select first result url autocomplete.
actual result
- nothing happen, cannot use tab to select url autocomplete.
expected result
- can use tab to select url autocomplete.
first bad revision is
changeset: 92974:de5745bce8bc
user: Masayuki Nakano <masayuki@d-toybox.com>
date: Thu May 03 17:35:02 2012 +0900
files: content/events/test/test_dom_keyboard_event.html dom/base/nsDOMWindowUtils.cpp dom/interfaces/base/nsIDOMWindowUtils.idl layout/forms/test/test_bug348236.html testing/mochitest/tests/SimpleTest/EventUtils.js
description:
Bug 166240 part.8 Add tests for KeyboardEvent.location (synthesized events) r=smaug, sr=jst
last good revision is
changeset: 92966:a6a335cd2c94
user: Jonathan Kew <jkew@mozilla.com>
date: Thu May 03 08:57:30 2012 +0100
files: layout/reftests/text-transform/greek-small-caps-1-ref.html layout/reftests/text-transform/greek-small-caps-1.html layout/reftests/text-transform/reftest.list
description:
bug 307039 - reftest for Greek small-caps behavior. r=past
pushlog http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml/?fromchange=a6a335cd2c94&tochange=de5745bce8bc
Updated•13 years ago
|
Keywords: regression
| Reporter | ||
Updated•13 years ago
|
Version: unspecified → Trunk
Comment 1•13 years ago
|
||
Masayuki-san, could you please check/clarify how that fix affected the locationbar?
Assignee: nobody → masayuki
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 2•13 years ago
|
||
Hmm, I have no idea. In XP level, it shouldn't cause any regression.
The widget part for Windows is a little bit complex. I guess that the cause should be in part.2.
| Assignee | ||
Comment 3•13 years ago
|
||
I'd like someone to test this regression on other platforms.
| Assignee | ||
Comment 4•13 years ago
|
||
Ah, I see. I found a logical bug in the previous code. But the behavior is broken by the new code.
Component: Location Bar → Widget: Win32
Product: Firefox → Core
QA Contact: location.bar → win32
| Reporter | ||
Comment 5•13 years ago
|
||
Cannot reproduce on Linux. Mozilla/5.0 (X11; Linux i686; rv:15.0) Gecko/15.0 Firefox/15.0a1
| Assignee | ||
Comment 6•13 years ago
|
||
Thanks. I think that the keypress events of ESC key and Tab key do not work.
| Assignee | ||
Updated•13 years ago
|
Summary: Unable to press tab to select url autocomplete → keyCode of keypress event for Tab key and ESC key is broken on Windows
| Assignee | ||
Comment 9•13 years ago
|
||
testing on tryserver.
https://tbpl.mozilla.org/?tree=Try&usebuildbot=1&rev=1d5540cfcde0
| Assignee | ||
Updated•13 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 10•13 years ago
|
||
Comment on attachment 621077 [details] [diff] [review]
Patch
At OnChar(), it sets keycode from wParam of WM_CHAR when charCode is zero. It's logically wrong, but it worked because native virtual keycode and native charcode are same for Tab key and Esc key.
This patch computes DOM keycode from scan code and sets it when keypress event's charCode is 0.
Attachment #621077 -
Flags: review?(jmathies)
Updated•13 years ago
|
Attachment #621077 -
Flags: review?(jmathies) → review+
| Assignee | ||
Comment 11•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla15
You need to log in
before you can comment on or make changes to this bug.
Description
•