Bug 751881 Set keycode to keypress event at WM_CHAR handler when charcode is 0 r=jimm