widget/windows/KeyboardLayout.cpp
@@ -38,6 +38,8 @@
 #include "mozilla/Util.h"
 
 #include "KeyboardLayout.h"
+#include "nsWindow.h"
+#include "nsIMM32Handler.h"
 
 #include "nsMemory.h"
 #include "nsToolkit.h"
@@ -227,9 +229,9 @@ VirtualKey::GetNativeUniChars(PRUint8 aShiftState,
 }
 
 NativeKey::NativeKey(HKL aKeyboardLayout,
-                     HWND aWnd,
+                     nsWindow* aWindow,
                      const MSG& aKeyOrCharMessage) :
-  mVirtualKeyCode(0), mOriginalVirtualKeyCode(0)
+  mDOMKeyCode(0), mVirtualKeyCode(0), mOriginalVirtualKeyCode(0)
 {
   mScanCode = WinUtils::GetScanCode(aKeyOrCharMessage.lParam);
   mIsExtended = WinUtils::IsExtendedScanCode(aKeyOrCharMessage.lParam);
@@ -249,7 +251,8 @@ NativeKey::NativeKey(HKL aKeyboardLayout,
           break;
         case VK_PROCESSKEY:
           mVirtualKeyCode = mOriginalVirtualKeyCode =
-            static_cast<PRUint8>(::ImmGetVirtualKey(aWnd));
+            static_cast<PRUint8>(
+              ::ImmGetVirtualKey(aWindow->GetWindowHandle()));
           break;
         default:
           mVirtualKeyCode = mOriginalVirtualKeyCode;
@@ -275,6 +278,26 @@ NativeKey::NativeKey(HKL aKeyboardLayout,
 
   if (!mVirtualKeyCode) {
     mVirtualKeyCode = mOriginalVirtualKeyCode;
+  }
+
+  mDOMKeyCode = mOriginalVirtualKeyCode;
+  if (nsIMM32Handler::IsComposingOn(aWindow)) {
+    return;
+  }
+
+  switch (mOriginalVirtualKeyCode) {
+    // 0xBA, For the US standard keyboard, the ';:' key
+    case VK_OEM_1:
+      mDOMKeyCode =  NS_VK_SEMICOLON;
+      break;
+    // 0xBB, For any country/region, the '+' key
+    case VK_OEM_PLUS:
+      mDOMKeyCode = NS_VK_ADD;
+      break;
+    // 0xBD, For any country/region, the '-' key
+    case VK_OEM_MINUS:
+      mDOMKeyCode = NS_VK_SUBTRACT;
+      break;
   }
 }
 
